# ods

./: README.md  pyproject.toml  pytest-runner.py  setup.py
.github/workflows/: publish.yml  tests.yml
backlog/bugs/: 2025-07-11_broken-data-urls.md  2025-07-11_data-format-parsing-issues.md  2025-07-11_test-dependency-issues.md  2025-07-11_test-framework-configuration.md
backlog/features/: 2025-07-11_test-infrastructure.md
cip/: README.md  cip0001.md
docs/: publishing.md
