[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pods"
version = "0.1.17"
description = "Python software for Open Data Science"
authors = ["Neil D. Lawrence <lawrennd@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/lawrennd/ods"
license = "MIT"
include = [
    "pods/defaults.cfg",
    "pods/data_resources.json",
    "pods/football_teams.json"
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.scripts]
test = "pytest:main"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "*"
PyYAML = "*"
scipy = "*"
numpy = ">=1.26"

[tool.poetry.group.dev.dependencies]
twine = "*"
pytest = "*"
pytest-cov = "*"
mock = "*"

[tool.poetry.extras]
hdf5-compatibility = ["tables"]
google-trends-interface = ["pytrends"]
nigerian-nmis-data = ["geopandas"]
kepler-telescope-light-curves = ["astropy"]
olivetti-faces = ["netpbmfile"]
gpx-data = ["gpxpy"]
excel-files = ["openpyxl"]
all-datasets = ["tables", "pytrends", "geopandas", "astropy", "netpbmfile", "gpxpy", "openpyxl"]

[tool.pytest.ini_options]
testpaths = ["pods/testing"]
python_files = ["*_tests.py", "test_*.py"]
python_classes = ["*Tests", "Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

